crates/plotnik-lib/tests/04-emit/anchors/array_strict_first_child_impossible.txt
Q = (array .! (identifier))
------------------ DIAGNOSTICS -------------------
error: with strict adjacency (`.!`), the first child of `array` must be `identifier`, but `array` begins with `"["`
 --> query.ptk:1:6
  |
1 | Q = (array .! (identifier))
  |      ^^^^^
  |
help: `.!` allows nothing between — not even anonymous tokens or comments; the soft anchor `.` skips those: `(array . (identifier))`
